--- a/us/template/edit_trial.html
+++ b/us/template/edit_trial.html
@@ -54,11 +54,7 @@
         .user-name {
             font-weight: bold;
         }
-        .border-for-left{
-            margin-left: 6px;
-            height: 40px;
-            border-left: 3px solid rgb(103, 168, 103);
-        }
+
         @media (max-width: 991.98px) {
             #search-results {
                 position: fixed;
@@ -104,7 +100,7 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
@@ -113,10 +109,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'ScoutPlayer' %}">Players</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page"
-                                href="{% url 'following_feeds' %}">Feeds</a>
                         </li>
                     </ul>
                 </div>
@@ -130,7 +122,7 @@
             </div>
         </div>
     </nav>
-    {% elif user.is_player %}
+    {% elif user.is_club %}
     <nav class="navbar player-navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="ms-5 navbar-brand d-flex fs-2 fw-bold" href="#">
@@ -149,37 +141,24 @@
                 <div id="search-results" class="col-lg-3 col-11 rounded shadow-lg">
                     <!-- Results will be displayed here -->
                 </div>
-                <div class="ms-3 w-100">
+                <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'PlayerScout' %}">Scouts</a>
+                                href="{% url 'ClubScout' %}">Scouts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'player-club' %}">Clubs</a>
+                                href="{% url 'ClubPlayer' %}">Players</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'following_feeds' %}">Feeds</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'trial_list' %}">Trials</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page"
-                                href="{% url 'enrolled_trials' %}">My Trials</a>
-                        </li>
-
                     </ul>
                 </div>
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
-                        <p class="text-light "><i class="bi bi-person-circle"></i> {{user.first_name}}</p>
+                        <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}}</p>
                     </div>
                     <a class="d-flex flex-column justify-content-center text-decoration-none"
                         href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
@@ -209,33 +188,22 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'ClubScout' %}">Scouts</a>
+                                href="{% url 'PlayerScout' %}">Scouts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'ClubPlayer' %}">Players</a>
+                                href="{% url 'player-club' %}">Clubs</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'following_feeds' %}">Feeds</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'tournaments' %}">Tournaments</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page"
-                                href="{% url 'enrolled' %}">Enrolled</a>
-                        </li>
+
                     </ul>
                 </div>
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
-                        <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}} </p>
+                        <p class="text-light "><i class="bi bi-person-circle"></i> {{user.first_name}}</p>
                     </div>
                     <a class="d-flex flex-column justify-content-center text-decoration-none"
                         href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
@@ -244,44 +212,52 @@
         </div>
     </nav>
     {% endif %}
-    <div class="d-flex flex-wrap justify-content-center mt-4">
-
-        <div class="col-lg-8 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
-            <div>
-                <p class="h4 text-secondary fw-bold">Enrolled Trials</p>
-
-            </div>
-
-            {% if feeds %}
-            {% for i in feeds %}
-            
-                <div class="border-for-left mb-3"></div>
-                    <p class="text-success"><i class="bi bi-circle-fill"></i>  Your trial registration for {{i.trial.user.club_name}} is confirmed for {{i.trial.trail_date}}, at {{i.date_of_join}}<p>
+    <div class="d-flex justify-content-center">
+        <div class="bg-white shadow-lg mt-4 pb-3 rounded col-12 col-lg-8">
+            <p class="m-4 text-secondary fs-4 fw-bold">Edit Trial</p>
+            <form action="" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
                 
-            
-            {% endfor %}
-            {% else %}
-            <p class="text-danger">You don't have a registered trial</p>
-            {% endif %}
-            
+                <div class="d-flex justify-content-center">
+                    <div class="col-lg-8 col-12">
 
-        
-
+                        <div class="d-flex justify-content-center gap-2 m-5 flex-column">
+                            <p class="fw-bold">Old Date: {{tour.trail_date}}</p>
+                            <label for="tourdate">New Date:</label>
+                            <input type="datetime-local" class="form-control" required name="tourdate" id="tourdate">
+                            <div class="d-flex flex-column w-100">
+                                <label for="dist">District</label>
+                                <select class="form-control" name="dist" id="">
+                                    <option value="{{ tour.district }}">{{ tour.district }}</option>
+                                    {% for choice_value,choice in district_choices %}
+                                    <option value="{{ choice }}">{{ choice }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <label for="contact">Contact</label>
+                            <input type="number" name="contact" min="0" value="{{tour.contact}}" class="form-control" placeholder="Contact Number" required>
+                            <label for="contact" id="contactErrorLabel" class="text-danger"></label>
+                            <label for="place">Venue</label>
+                            <input type="text" name="place" value="{{tour.place}}" class="form-control" placeholder="Venue" required>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <button type="submit" class="btn btn-success" disabled>Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 
 </html>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<form action="post">
-    {% csrf_token %}
-</form>
+
 
 <script>
     $(document).ready(function () {
-        function getCSRFToken() {
-            return $('input[name="csrfmiddlewaretoken"]').val();
-        }
+        var today = new Date().toISOString().slice(0, 16);
 
+document.getElementsByName("tourdate")[0].min = today;
         $("#search_bar").keyup(function () {
 
             var headers = {
@@ -351,25 +327,55 @@
                 }
             })
         })
-    });
+    })
 </script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script>
-    function showConfirmation(tour_id) {
-        console.log(tour_id);
-        
-        Swal.fire({
-            title: 'Are you sure?',
-            text: 'Do you want to enroll in this tournament?',
-            icon: 'question',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                window.location.href = "{% url 'enrol_tour' 0 %}".replace('0',tour_id);
+    // Get the current date in the format "YYYY-MM-DD"
+    const currentDate = new Date().toISOString().split('T')[0];
+    // Set the minimum attribute of the date input to the current date
+    document.getElementById('tourdate').setAttribute('min', currentDate);
+</script>
+<script>
+    $(document).ready(function () {
+        console.log("Function called")
+        // Get references to the input fields and submit button
+        var tourdateInput = $('#tourdate');
+        var submitButton = $('button[type="submit"]');
+        var contactInput = $('input[name="contact"]');
+        var contactErrorLabel = $('#contactErrorLabel');
+        var place = $('input[name="place"]');
+        contactInput.on('keyup', validateForm);
+        place.on('keyup', validateForm);
+        tourdateInput.on('change', validateForm);
+
+        // Function to perform validation
+        function validateForm() {
+            console.log("validation")
+            // Get the values from the input fields
+
+            var contactValue = contactInput.val().trim();
+            var trimplace = place.val().trim();
+
+            // Perform your validation logic here
+             // Placeholder for your validation logic
+            var phoneRegex = /^\d{10}$/; // Assumes a 10-digit phone number format
+            var isPhoneValid = phoneRegex.test(contactValue);
+            if (!isPhoneValid) {
+                contactErrorLabel.text('Invalid phone number');
+                console.log("False");
+            } else {
+                console.log("True");
+                contactErrorLabel.text(''); // Clear error message
             }
-        });
-    }
+            if(trimplace==='' || !isPhoneValid){
+                isValid=false
+            }
+            else{
+                isValid=true
+            }
+            
+            // Enable or disable the submit button based on validation result
+            submitButton.prop('disabled', !isValid);
+        }
+    });
 </script>
