--- a/us/template/hosted_trials.html
+++ b/us/template/hosted_trials.html
@@ -54,11 +54,7 @@
         .user-name {
             font-weight: bold;
         }
-        .border-for-left{
-            margin-left: 6px;
-            height: 40px;
-            border-left: 3px solid rgb(103, 168, 103);
-        }
+
         @media (max-width: 991.98px) {
             #search-results {
                 position: fixed;
@@ -149,7 +145,7 @@
                 <div id="search-results" class="col-lg-3 col-11 rounded shadow-lg">
                     <!-- Results will be displayed here -->
                 </div>
-                <div class="ms-3 w-100">
+                <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
@@ -163,17 +159,10 @@
                                 href="{% url 'player-club' %}">Clubs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
+                            <a class="nav-link text-white" aria-current="page"
                                 href="{% url 'following_feeds' %}">Feeds</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'trial_list' %}">Trials</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page"
-                                href="{% url 'enrolled_trials' %}">My Trials</a>
-                        </li>
+
 
                     </ul>
                 </div>
@@ -219,17 +208,14 @@
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'ClubPlayer' %}">Players</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'following_feeds' %}">Feeds</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'tournaments' %}">Tournaments</a>
                         </li>
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page"
-                                href="{% url 'enrolled' %}">Enrolled</a>
+                            <a class="nav-link text-white" aria-current="page" href="{% url 'hosted_trials' %}">Trials</a>
                         </li>
                     </ul>
                 </div>
@@ -248,24 +234,89 @@
 
         <div class="col-lg-8 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
             <div>
-                <p class="h4 text-secondary fw-bold">Enrolled Trials</p>
+                <p class="h4 text-secondary fw-bold">Hosted Trials</p>
 
             </div>
 
             {% if feeds %}
             {% for i in feeds %}
-            
-                <div class="border-for-left mb-3"></div>
-                    <p class="text-success"><i class="bi bi-circle-fill"></i>  Your trial registration for {{i.trial.user.club_name}} is confirmed for {{i.trial.trail_date}}, at {{i.date_of_join}}<p>
-                
-            
+
+            <div class="mt-4 border-top pt-4">
+
+                <div class="d-flex flex-lg-row flex-column gap-5">
+                    <div class="col-lg-9 col-12">
+                        <div class="mt-3 fs-5">
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">Date: </p>
+                                <p>{{i.trail_date}}</p>
+                            </div>
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">Venue: </p>
+                                <p>{{i.place}}</p>
+                            </div>
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">District: </p>
+                                <p>{{i.district}}</p>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column gap-3 justify-content-center">
+                        <a href="{% url 'trial_party' i.id %}" class="btn btn-success">View Participants</a>
+                        <a href="{% url 'edit_trial' i.id %}" class="btn btn-primary">Edit Trial</a>
+                        <button onclick="showConfirmation('{{ i.id }}')" class="btn btn-danger">Cancel Trial</button>
+                    </div>
+                </div>
+            </div>
             {% endfor %}
             {% else %}
-            <p class="text-danger">You don't have a registered trial</p>
+            <p class="text-danger">No Trials hosted</p>
+            {% endif %}
+            <div class="mt-5">
+                <p class="h4 text-secondary fw-bold">Finished Trials</p>
+
+            </div>
+
+            {% if finished %}
+            {% for i in finished %}
+
+            <div class="mt-4 border-top pt-4">
+
+                <div class="d-flex flex-lg-row flex-column gap-5">
+                    <div class="col-lg-9 col-12">
+                        <div class="mt-3 fs-5">
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">Date: </p>
+                                <p>{{i.trail_date}}</p>
+                            </div>
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">Venue: </p>
+                                <p>{{i.place}}</p>
+                            </div>
+                            <div class="d-flex gap-1">
+                                <p class="fw-bold">District: </p>
+                                <p>{{i.district}}</p>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column gap-3 justify-content-center">
+                        <a class="btn btn-warning" href="{% url 'trial_winners' i.id %}">Select Players</a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            {% else %}
+            <p class="text-danger">No Finished Trials</p>
             {% endif %}
             
 
-        
+            
+
+            
+
+        </div>
+
 
     </div>
 </body>
@@ -357,18 +408,18 @@
 <script>
     function showConfirmation(tour_id) {
         console.log(tour_id);
-        
+
         Swal.fire({
             title: 'Are you sure?',
-            text: 'Do you want to enroll in this tournament?',
-            icon: 'question',
+            text: 'Do you want to cancel this trial?',
+            icon: 'error',
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
             cancelButtonColor: '#d33',
             confirmButtonText: 'Yes'
         }).then((result) => {
             if (result.isConfirmed) {
-                window.location.href = "{% url 'enrol_tour' 0 %}".replace('0',tour_id);
+                window.location.href = "{% url 'cancel_trial' 0 %}".replace('0', tour_id);
             }
         });
     }
