--- a/us/template/trial_party.html
+++ b/us/template/trial_party.html
@@ -17,48 +17,58 @@
             margin-left: 3px;
         }
 
-        /* Style for the user list container */
-        .user-list {
-            position: absolute;
-            top: 100%;
-            left: 0;
-            width: 100%;
-            max-height: 200px;
-            /* Set a maximum height for the list */
-            overflow-y: auto;
-            /* Enable vertical scrolling */
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-top: none;
-            display: none;
-            /* Hide by default */
-        }
+        .card {
+z-index: 0;
+  height: 300px;
+  background: #07182E;
+  position: relative;
+  display: flex;
+  place-content: center;
+  place-items: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
 
-        /* Style for each user box */
-        .user-box {
-            display: flex;
-            align-items: center;
-            border-bottom: 1px solid #ccc;
-            padding: 10px;
-        }
+.card-body {
+  z-index: 1;
+  color: white;
+}
 
-        /* Style for user image */
-        .user-img {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            margin-right: 10px;
-        }
+.card::before {
+  content: '';
+  position: absolute;
+  width: 100px;
+  background-image: linear-gradient(180deg, rgb(255, 217, 0), rgb(255, 48, 255));
+  height: 130%;
+  animation: rotBGimg 3s linear infinite;
+  transition: all 0.2s linear;
+}
 
-        /* Style for user name */
-        .user-name {
-            font-weight: bold;
-        }
-        .border-for-left{
-            margin-left: 6px;
-            height: 40px;
-            border-left: 3px solid rgb(103, 168, 103);
-        }
+@keyframes rotBGimg {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.card::after {
+  content: '';
+  position: absolute;
+  background: linear-gradient(rgb(60, 21, 60), rgb(41, 0, 41));
+  ;
+  inset: 5px;
+  border-radius: 15px;
+}  
+/* .card:hover:before {
+  background-image: linear-gradient(180deg, rgb(81, 255, 0), purple);
+  animation: rotBGimg 3.5s linear infinite;
+} */
+
+
+
         @media (max-width: 991.98px) {
             #search-results {
                 position: fixed;
@@ -115,8 +125,7 @@
                                 href="{% url 'ScoutPlayer' %}">Players</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page"
-                                href="{% url 'following_feeds' %}">Feeds</a>
+                            <a class="nav-link text-white" aria-current="page" href="{% url 'hosted_trials' %}">Trials</a>
                         </li>
                     </ul>
                 </div>
@@ -130,7 +139,7 @@
             </div>
         </div>
     </nav>
-    {% elif user.is_player %}
+    {% elif user.is_club %}
     <nav class="navbar player-navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="ms-5 navbar-brand d-flex fs-2 fw-bold" href="#">
@@ -149,37 +158,37 @@
                 <div id="search-results" class="col-lg-3 col-11 rounded shadow-lg">
                     <!-- Results will be displayed here -->
                 </div>
-                <div class="ms-3 w-100">
+                <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'PlayerScout' %}">Scouts</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'player-club' %}">Clubs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'following_feeds' %}">Feeds</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'trial_list' %}">Trials</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page"
-                                href="{% url 'enrolled_trials' %}">My Trials</a>
+                                href="{% url 'ClubScout' %}">Scouts</a>
                         </li>
 
+
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'tournaments' %}">Tournaments</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'enrolled' %}">Enrolled</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" aria-current="page"
+                                href="{% url 'hosted_tour' %}">Hosted</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page" href="{% url 'hosted_trials' %}">Trials</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
-                        <p class="text-light "><i class="bi bi-person-circle"></i> {{user.first_name}}</p>
+                        <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}}</p>
                     </div>
                     <a class="d-flex flex-column justify-content-center text-decoration-none"
                         href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
@@ -209,33 +218,22 @@
                 <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
+                            <a class="nav-link  text-white" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'ClubScout' %}">Scouts</a>
+                                href="{% url 'PlayerScout' %}">Scouts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'ClubPlayer' %}">Players</a>
+                                href="{% url 'player-club' %}">Clubs</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'following_feeds' %}">Feeds</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'tournaments' %}">Tournaments</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page"
-                                href="{% url 'enrolled' %}">Enrolled</a>
-                        </li>
+
                     </ul>
                 </div>
                 <div class="d-flex w-100 justify-content-start justify-content-sm-end">
                     <div class="border rounded p-2 pb-0 mt-2 ms-3">
-                        <p class="text-light "><i class="bi bi-shield-fill"></i> {{user.club_name}} </p>
+                        <p class="text-light "><i class="bi bi-person-circle"></i> {{user.first_name}}</p>
                     </div>
                     <a class="d-flex flex-column justify-content-center text-decoration-none"
                         href="{% url 'logout' %}"><button class="btn text-white ms-4">Log-out</button></a>
@@ -244,44 +242,37 @@
         </div>
     </nav>
     {% endif %}
-    <div class="d-flex flex-wrap justify-content-center mt-4">
+    <p class="m-5 text-secondary fw-bold fs-3">Participants</p>
+    
 
-        <div class="col-lg-8 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
-            <div>
-                <p class="h4 text-secondary fw-bold">Enrolled Trials</p>
-
-            </div>
-
-            {% if feeds %}
-            {% for i in feeds %}
-            
-                <div class="border-for-left mb-3"></div>
-                    <p class="text-success"><i class="bi bi-circle-fill"></i>  Your trial registration for {{i.trial.user.club_name}} is confirmed for {{i.trial.trail_date}}, at {{i.date_of_join}}<p>
-                
-            
-            {% endfor %}
-            {% else %}
-            <p class="text-danger">You don't have a registered trial</p>
-            {% endif %}
-            
-
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 gutters-sm">
+        {% for i in participants %}
         
-
+            <div class="col mb-4 ms-lg-4">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <img src="{{i.user.img.url}}"
+                            style="width:100px;" alt="User"
+                            class="img-fluid img-thumbnail rounded-circle border-0 mb-3">
+                        <h5 class="card-title fs-3">{{i.user.first_name}} {{i.user.last_name}}</h5>
+                        <p class="text-white fs-5 mb-1">District: {{i.user.district}}</p>
+                        <p class="text-muted fs-5 font-size-sm">Locality: {{i.user.locality}}</p>
+                    </div>
+                    <div class="card-footer">
+                        
+                        
+                    </div>
+                </div>
+            </div>
+        
+        {% endfor %}
     </div>
+    
 </body>
 
 </html>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<form action="post">
-    {% csrf_token %}
-</form>
-
 <script>
     $(document).ready(function () {
-        function getCSRFToken() {
-            return $('input[name="csrfmiddlewaretoken"]').val();
-        }
-
         $("#search_bar").keyup(function () {
 
             var headers = {
@@ -351,25 +342,5 @@
                 }
             })
         })
-    });
-</script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-<script>
-    function showConfirmation(tour_id) {
-        console.log(tour_id);
-        
-        Swal.fire({
-            title: 'Are you sure?',
-            text: 'Do you want to enroll in this tournament?',
-            icon: 'question',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                window.location.href = "{% url 'enrol_tour' 0 %}".replace('0',tour_id);
-            }
-        });
-    }
+    })
 </script>
