--- a/us/template/trial_winners.html
+++ b/us/template/trial_winners.html
@@ -54,11 +54,7 @@
         .user-name {
             font-weight: bold;
         }
-        .border-for-left{
-            margin-left: 6px;
-            height: 40px;
-            border-left: 3px solid rgb(103, 168, 103);
-        }
+
         @media (max-width: 991.98px) {
             #search-results {
                 position: fixed;
@@ -149,7 +145,7 @@
                 <div id="search-results" class="col-lg-3 col-11 rounded shadow-lg">
                     <!-- Results will be displayed here -->
                 </div>
-                <div class="ms-3 w-100">
+                <div class="ms-3">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link  text-secondary" aria-current="page" href="{% url 'index' %}">Home</a>
@@ -163,17 +159,10 @@
                                 href="{% url 'player-club' %}">Clubs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
+                            <a class="nav-link text-white" aria-current="page"
                                 href="{% url 'following_feeds' %}">Feeds</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'trial_list' %}">Trials</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page"
-                                href="{% url 'enrolled_trials' %}">My Trials</a>
-                        </li>
+
 
                     </ul>
                 </div>
@@ -219,17 +208,14 @@
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'ClubPlayer' %}">Players</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-secondary" aria-current="page"
-                                href="{% url 'following_feeds' %}">Feeds</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-secondary" aria-current="page"
                                 href="{% url 'tournaments' %}">Tournaments</a>
                         </li>
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page"
-                                href="{% url 'enrolled' %}">Enrolled</a>
+                            <a class="nav-link text-white" aria-current="page" href="{% url 'hosted_trials' %}">Trials</a>
                         </li>
                     </ul>
                 </div>
@@ -246,26 +232,57 @@
     {% endif %}
     <div class="d-flex flex-wrap justify-content-center mt-4">
 
-        <div class="col-lg-8 col-12 player-feeds m-3 p-5 rounded bg-white shadow-lg">
-            <div>
-                <p class="h4 text-secondary fw-bold">Enrolled Trials</p>
-
-            </div>
-
-            {% if feeds %}
-            {% for i in feeds %}
+        <div class="col-lg-8 col-12 player-feeds m-3 p-5 table-responsive rounded bg-white shadow-lg">
+            <form method="post">
+                {% csrf_token %}
+            <table class="table table-hover table-dark table-striped">
+                <tr class="fw-bold">
+                    <td>
+                        Name
+                    </td>
+                    <td>
+                        District
+                    </td>
+                    <td>
+                        locality
+                    </td>
+                    <td>
+                        Position
+                    </td>
+                    <td>
+                        Select
+                    </td>
+                </tr>
+                {% for i in participants %}
+                    <tr>
+                        <td>
+                            {{i.user.first_name}} {{i.user.last_name}}
+                        </td>
+                        <td>
+                            {{i.user.district}}
+                        </td>
+                        <td>
+                            {{i.user.locality}}
+                        </td>
+                        <td>
+                            {{i.user.player_pos}}
+                        </td>
+                        <td>
+                            <input type="checkbox" value="{{i.user.id}}" name="players" class="form-check">
+                        </td>
+                    </tr>
+                {% endfor %}
+            </table>
+            <button type="submit" class="btn btn-primary w-100">Submit</button>
+        </form>
             
-                <div class="border-for-left mb-3"></div>
-                    <p class="text-success"><i class="bi bi-circle-fill"></i>  Your trial registration for {{i.trial.user.club_name}} is confirmed for {{i.trial.trail_date}}, at {{i.date_of_join}}<p>
-                
-            
-            {% endfor %}
-            {% else %}
-            <p class="text-danger">You don't have a registered trial</p>
-            {% endif %}
+
             
 
-        
+            
+
+        </div>
+
 
     </div>
 </body>
@@ -357,18 +374,18 @@
 <script>
     function showConfirmation(tour_id) {
         console.log(tour_id);
-        
+
         Swal.fire({
             title: 'Are you sure?',
-            text: 'Do you want to enroll in this tournament?',
-            icon: 'question',
+            text: 'Do you want to cancel this trial?',
+            icon: 'error',
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
             cancelButtonColor: '#d33',
             confirmButtonText: 'Yes'
         }).then((result) => {
             if (result.isConfirmed) {
-                window.location.href = "{% url 'enrol_tour' 0 %}".replace('0',tour_id);
+                window.location.href = "{% url 'cancel_trial' 0 %}".replace('0', tour_id);
             }
         });
     }
